<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4019.2">
  <DUT Name="ST_PAOut_Interpreter" Id="{bf6ba42d-4a39-486f-996c-6009e4e1debc}">
    <Declaration><![CDATA[TYPE ST_PAOut_Interpreter :
STRUCT
	
	
	out_stPlcToItp			:PLCTONC_NCICHANNEL_REF;	
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>