<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4019.2">
  <DUT Name="ST_PAOut_Main" Id="{e2af21b1-7bed-422e-851b-f0537bae6752}">
    <Declaration><![CDATA[TYPE ST_PAOut_Main :
STRUCT
	
	stInterp					:ST_PAOut_Interpreter;
	stPAOutDrops				:ST_PAOut_Drops;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>