<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4019.2">
  <POU Name="FB_Interpreter" Id="{87076cac-e9ce-4c83-8386-ecbef35635d0}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_Interpreter
VAR
	fbLoadProg				:ItpLoadProgEx;
	fbStart					:ItpStartStopEx;
END_VAR
VAR_INPUT
	bExec					:BOOL;
	stPAIn					:ST_PAIn_Interpreter;
	stConfig				:ST_Config_Interpreter;
END_VAR
VAR_OUTPUT
	bFini	:BOOL;
	bBus	:BOOL;
	bErr	:BOOL;

	stPAOut					:ST_PAOut_Interpreter;
	stStatus				:ST_Status_Interpreter;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[CASE stStatus.iState OF
		

	00: IF 	bExec THEN
			bBus:=TRUE;
			stStatus.iState:=05;
		END_IF


	05:
		fbLoadProg(
		bExecute	:= TRUE,
		sPrg		:= stConfig.g_strProgram,
		nLength		:= LEN(stConfig.g_strProgram),
		tTimeOut	:= T#200MS,
		sNciToPlc	:= MAIN.stPAIn.stInterp.in_stItpToPlc);
		
	stStatus.iItpState		:=	ItpGetStateInterpreter(stPAIn.in_stItpToPlc );
	
	IF stStatus.iItpState = NCI_INTERPRETER_READY THEN
		(* load part program succeeded *)
		stStatus.iState	:= 10;
	ELSIF stStatus.iItpState = NCI_INTERPRETER_ABORTED THEN
		(* load program failed - probably there is a load time error, e.g. syntax error *)
		(* add error handling here *)
		stStatus.bErr		:= TRUE;
		stStatus.nErr	:= 4711;	(* substitute with own error code *)
		stStatus.iState	:= 200;
	END_IF
	
	10: ItpSetOverridePercent( fOverridePercent:=100, sPlcToNci:=stPAOut.out_stPlcToItp );
	
		fbStart(
				bStart		:= stConfig.bSta,
				bStop		:= stConfig.bSto,
				tTimeOut	:= T#200MS,
				sNciToPlc	:=Main.stPAIn.stInterp.in_stItpToPlc
				);

	IF NOT fbStart.bBusy THEN
		fbStart( bStart:=FALSE, sNciToPlc:=stPAIn.in_stItpToPlc );
		IF NOT fbStart.bErr THEN
			stStatus.iState	:= 20;
		ELSE
			(* an error occured *)
			stStatus.bErr		:= TRUE;
			stStatus.nErr	:= fbStart.nErrId;
			stStatus.iState	:= 200;
		END_IF
	END_IF
		
	20:	stStatus.iItpState	:=	ItpGetStateInterpreter(  sNciToPlc:=MAIN.stPAIn.stInterp.in_stItpToPlc );
	IF stStatus.iItpState <> NCI_INTERPRETER_READY THEN
		bFini:=TRUE;
		bBus:=FALSE;
		stStatus.iState	:= 40;
	END_IF
				
END_CASE]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>